tests/invalid_semantic/if_condition_int.mc
int main() {
    int x;
    x = 1;
    if (x) {
        write(x);
    }
    return 0;
}
